import bg section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,207 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<link href="./style.css" rel="stylesheet" type="text/css" />
+		<title>Google Font Pairing</title>
 	</head>
-	<body></body>
+	<body>
+		<header>
+			<a href="#"><img src="" alt="" /></a>
+			<nav>
+				<a href="#">Home</a>
+				<a href="#font-pairing">Fonts Pairing</a>
+				<a href="#footer-social">About</a>
+				<a href="#footer-signature">Contact</a>
+			</nav>
+		</header>
+		<main id="font-pairing">
+			<section id="id_section">
+				<div class="pairing-number">1</div>
+				<div class="pairing-fonts">Font1 + Font2</div>
+				<div class="pairing-sample">
+					<div class="up">
+						<h2>SampleTitle</h2>
+						<p>SampleText</p>
+						<p>SampleSignature</p>
+					</div>
+					<div class="down">
+						<button>Download Font Pair</button>
+						<p>View Font1 + Font2 on Google Fonts</p>
+						<button>Copy the Code</button>
+						<p>Click to open HTML + CSS</p>
+					</div>
+				</div>
+			</section>
+			<section id="id_section">
+				<div class="pairing-number">1</div>
+				<div class="pairing-fonts">Font1 + Font2</div>
+				<div class="pairing-sample">
+					<div class="up">
+						<h2>SampleTitle</h2>
+						<p>SampleText</p>
+						<p>SampleSignature</p>
+					</div>
+					<div class="down">
+						<button>Download Font Pair</button>
+						<p>View Font1 + Font2 on Google Fonts</p>
+						<button>Copy the Code</button>
+						<p>Click to open HTML + CSS</p>
+					</div>
+				</div>
+			</section>
+			<section id="id_section">
+				<div class="pairing-number">1</div>
+				<div class="pairing-fonts">Font1 + Font2</div>
+				<div class="pairing-sample">
+					<div class="up">
+						<h2>SampleTitle</h2>
+						<p>SampleText</p>
+						<p>SampleSignature</p>
+					</div>
+					<div class="down">
+						<button>Download Font Pair</button>
+						<p>View Font1 + Font2 on Google Fonts</p>
+						<button>Copy the Code</button>
+						<p>Click to open HTML + CSS</p>
+					</div>
+				</div>
+			</section>
+			<section id="id_section">
+				<div class="pairing-number">1</div>
+				<div class="pairing-fonts">Font1 + Font2</div>
+				<div class="pairing-sample">
+					<div class="up">
+						<h2>SampleTitle</h2>
+						<p>SampleText</p>
+						<p>SampleSignature</p>
+					</div>
+					<div class="down">
+						<button>Download Font Pair</button>
+						<p>View Font1 + Font2 on Google Fonts</p>
+						<button>Copy the Code</button>
+						<p>Click to open HTML + CSS</p>
+					</div>
+				</div>
+			</section>
+			<section id="id_section">
+				<div class="pairing-number">1</div>
+				<div class="pairing-fonts">Font1 + Font2</div>
+				<div class="pairing-sample">
+					<div class="up">
+						<h2>SampleTitle</h2>
+						<p>SampleText</p>
+						<p>SampleSignature</p>
+					</div>
+					<div class="down">
+						<button>Download Font Pair</button>
+						<p>View Font1 + Font2 on Google Fonts</p>
+						<button>Copy the Code</button>
+						<p>Click to open HTML + CSS</p>
+					</div>
+				</div>
+			</section>
+			<section id="id_section">
+				<div class="pairing-number">1</div>
+				<div class="pairing-fonts">Font1 + Font2</div>
+				<div class="pairing-sample">
+					<div class="up">
+						<h2>SampleTitle</h2>
+						<p>SampleText</p>
+						<p>SampleSignature</p>
+					</div>
+					<div class="down">
+						<button>Download Font Pair</button>
+						<p>View Font1 + Font2 on Google Fonts</p>
+						<button>Copy the Code</button>
+						<p>Click to open HTML + CSS</p>
+					</div>
+				</div>
+			</section>
+			<section id="id_section">
+				<div class="pairing-number">1</div>
+				<div class="pairing-fonts">Font1 + Font2</div>
+				<div class="pairing-sample">
+					<div class="up">
+						<h2>SampleTitle</h2>
+						<p>SampleText</p>
+						<p>SampleSignature</p>
+					</div>
+					<div class="down">
+						<button>Download Font Pair</button>
+						<p>View Font1 + Font2 on Google Fonts</p>
+						<button>Copy the Code</button>
+						<p>Click to open HTML + CSS</p>
+					</div>
+				</div>
+			</section>
+			<section id="id_section">
+				<div class="pairing-number">1</div>
+				<div class="pairing-fonts">Font1 + Font2</div>
+				<div class="pairing-sample">
+					<div class="up">
+						<h2>SampleTitle</h2>
+						<p>SampleText</p>
+						<p>SampleSignature</p>
+					</div>
+					<div class="down">
+						<button>Download Font Pair</button>
+						<p>View Font1 + Font2 on Google Fonts</p>
+						<button>Copy the Code</button>
+						<p>Click to open HTML + CSS</p>
+					</div>
+				</div>
+			</section>
+			<section id="id_section">
+				<div class="pairing-number">1</div>
+				<div class="pairing-fonts">Font1 + Font2</div>
+				<div class="pairing-sample">
+					<div class="up">
+						<h2>SampleTitle</h2>
+						<p>SampleText</p>
+						<p>SampleSignature</p>
+					</div>
+					<div class="down">
+						<button>Download Font Pair</button>
+						<p>View Font1 + Font2 on Google Fonts</p>
+						<button>Copy the Code</button>
+						<p>Click to open HTML + CSS</p>
+					</div>
+				</div>
+			</section>
+			<section id="id_section">
+				<div class="pairing-number">1</div>
+				<div class="pairing-fonts">Font1 + Font2</div>
+				<div class="pairing-sample">
+					<div class="up">
+						<h2>SampleTitle</h2>
+						<p>SampleText</p>
+						<p>SampleSignature</p>
+					</div>
+					<div class="down">
+						<button>Download Font Pair</button>
+						<p>View Font1 + Font2 on Google Fonts</p>
+						<button>Copy the Code</button>
+						<p>Click to open HTML + CSS</p>
+					</div>
+				</div>
+			</section>
+		</main>
+		<footer>
+			<div class="footer-navigation">
+				<a href="#">Home</a>
+				<a href="#font-pairing">Fonts Pairing</a>
+				<a href="#footer-social">About</a>
+				<a href="#footer-signature">Contact</a>
+			</div>
+			<div class="footer-social">
+				<i class="fab fa-linkedin-in fa-lg"></i>
+				<i class="fab fa-facebook-f fa-lg"></i>
+				<i class="fab fa-youtube fa-lg"></i>
+			</div>
+			<div class="footer-signature">
+				<p>2021 © Font Pairing</p>
+				<p>Website by Antoine Ratat.</p>
+			</div>
+		</footer>
+	</body>
 </html>
