update style sections

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link href="./style.css" rel="stylesheet" type="text/css" />
+		<script src="https://kit.fontawesome.com/82a90178e2.js" crossorigin="anonymous"></script>
 		<title>Google Font Pairing</title>
 	</head>
 	<body>
@@ -18,173 +19,253 @@
 			</nav>
 		</header>
 		<main id="font-pairing">
-			<section id="id_section">
-				<div class="pairing-number">1</div>
-				<div class="pairing-fonts">Font1 + Font2</div>
+			<section id="section1">
+				<div class="pairing-number"><p>1</p></div>
+				<div class="pairing-fonts">
+					<p>Font1</p>
+					<i class="fas fa-plus"></i>
+					<p>Font2</p>
+				</div>
 				<div class="pairing-sample">
 					<div class="up">
-						<h2>SampleTitle</h2>
-						<p>SampleText</p>
-						<p>SampleSignature</p>
+						<h2>Lorem Ipsum</h2>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare sollicitudin metus ut pretium. In ut enim iaculis, tempor
+							magna id, commodo sem. Proin mollis aliquam risus ut elementum. Fusce maximus et urna at mollis. Morbi at erat ac massa pharetra
+							fringilla. Praesent venenatis convallis posuere.
+						</p>
+						<p class="signature">"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit"</p>
 					</div>
 					<div class="down">
-						<button>Download Font Pair</button>
-						<p>View Font1 + Font2 on Google Fonts</p>
-						<button>Copy the Code</button>
-						<p>Click to open HTML + CSS</p>
+						<button class="button-download">Download Font Pair</button>
+						<p class="view-font">View on Google Fonts</p>
+						<button class="button-code">Copy the Code</button>
+						<p class="view-html">Click to open HTML + CSS</p>
 					</div>
 				</div>
 			</section>
-			<section id="id_section">
-				<div class="pairing-number">1</div>
-				<div class="pairing-fonts">Font1 + Font2</div>
+			<section id="section2">
+				<div class="pairing-number"><p>2</p></div>
+				<div class="pairing-fonts">
+					<p>Font1</p>
+					<i class="fas fa-plus"></i>
+					<p>Font2</p>
+				</div>
 				<div class="pairing-sample">
 					<div class="up">
-						<h2>SampleTitle</h2>
-						<p>SampleText</p>
-						<p>SampleSignature</p>
+						<h2>Lorem Ipsum</h2>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare sollicitudin metus ut pretium. In ut enim iaculis, tempor
+							magna id, commodo sem. Proin mollis aliquam risus ut elementum. Fusce maximus et urna at mollis. Morbi at erat ac massa pharetra
+							fringilla. Praesent venenatis convallis posuere.
+						</p>
+						<p class="signature">"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit"</p>
 					</div>
 					<div class="down">
-						<button>Download Font Pair</button>
-						<p>View Font1 + Font2 on Google Fonts</p>
-						<button>Copy the Code</button>
-						<p>Click to open HTML + CSS</p>
+						<button class="button-download">Download Font Pair</button>
+						<p class="view-font">View on Google Fonts</p>
+						<button class="button-code">Copy the Code</button>
+						<p class="view-html">Click to open HTML + CSS</p>
 					</div>
 				</div>
 			</section>
-			<section id="id_section">
-				<div class="pairing-number">1</div>
-				<div class="pairing-fonts">Font1 + Font2</div>
+			<section id="section3">
+				<div class="pairing-number"><p>3</p></div>
+				<div class="pairing-fonts">
+					<p>Font1</p>
+					<i class="fas fa-plus"></i>
+					<p>Font2</p>
+				</div>
 				<div class="pairing-sample">
 					<div class="up">
-						<h2>SampleTitle</h2>
-						<p>SampleText</p>
-						<p>SampleSignature</p>
+						<h2>Lorem Ipsum</h2>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare sollicitudin metus ut pretium. In ut enim iaculis, tempor
+							magna id, commodo sem. Proin mollis aliquam risus ut elementum. Fusce maximus et urna at mollis. Morbi at erat ac massa pharetra
+							fringilla. Praesent venenatis convallis posuere.
+						</p>
+						<p class="signature">"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit"</p>
 					</div>
 					<div class="down">
-						<button>Download Font Pair</button>
-						<p>View Font1 + Font2 on Google Fonts</p>
-						<button>Copy the Code</button>
-						<p>Click to open HTML + CSS</p>
+						<button class="button-download">Download Font Pair</button>
+						<p class="view-font">View on Google Fonts</p>
+						<button class="button-code">Copy the Code</button>
+						<p class="view-html">Click to open HTML + CSS</p>
 					</div>
 				</div>
 			</section>
-			<section id="id_section">
-				<div class="pairing-number">1</div>
-				<div class="pairing-fonts">Font1 + Font2</div>
+			<section id="section4">
+				<div class="pairing-number"><p>4</p></div>
+				<div class="pairing-fonts">
+					<p>Font1</p>
+					<i class="fas fa-plus"></i>
+					<p>Font2</p>
+				</div>
 				<div class="pairing-sample">
 					<div class="up">
-						<h2>SampleTitle</h2>
-						<p>SampleText</p>
-						<p>SampleSignature</p>
+						<h2>Lorem Ipsum</h2>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare sollicitudin metus ut pretium. In ut enim iaculis, tempor
+							magna id, commodo sem. Proin mollis aliquam risus ut elementum. Fusce maximus et urna at mollis. Morbi at erat ac massa pharetra
+							fringilla. Praesent venenatis convallis posuere.
+						</p>
+						<p class="signature">"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit"</p>
 					</div>
 					<div class="down">
-						<button>Download Font Pair</button>
-						<p>View Font1 + Font2 on Google Fonts</p>
-						<button>Copy the Code</button>
-						<p>Click to open HTML + CSS</p>
+						<button class="button-download">Download Font Pair</button>
+						<p class="view-font">View on Google Fonts</p>
+						<button class="button-code">Copy the Code</button>
+						<p class="view-html">Click to open HTML + CSS</p>
 					</div>
 				</div>
 			</section>
-			<section id="id_section">
-				<div class="pairing-number">1</div>
-				<div class="pairing-fonts">Font1 + Font2</div>
+			<section id="section5">
+				<div class="pairing-number"><p>5</p></div>
+				<div class="pairing-fonts">
+					<p>Font1</p>
+					<i class="fas fa-plus"></i>
+					<p>Font2</p>
+				</div>
 				<div class="pairing-sample">
 					<div class="up">
-						<h2>SampleTitle</h2>
-						<p>SampleText</p>
-						<p>SampleSignature</p>
+						<h2>Lorem Ipsum</h2>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare sollicitudin metus ut pretium. In ut enim iaculis, tempor
+							magna id, commodo sem. Proin mollis aliquam risus ut elementum. Fusce maximus et urna at mollis. Morbi at erat ac massa pharetra
+							fringilla. Praesent venenatis convallis posuere.
+						</p>
+						<p class="signature">"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit"</p>
 					</div>
 					<div class="down">
-						<button>Download Font Pair</button>
-						<p>View Font1 + Font2 on Google Fonts</p>
-						<button>Copy the Code</button>
-						<p>Click to open HTML + CSS</p>
+						<button class="button-download">Download Font Pair</button>
+						<p class="view-font">View on Google Fonts</p>
+						<button class="button-code">Copy the Code</button>
+						<p class="view-html">Click to open HTML + CSS</p>
 					</div>
 				</div>
 			</section>
-			<section id="id_section">
-				<div class="pairing-number">1</div>
-				<div class="pairing-fonts">Font1 + Font2</div>
+			<section id="section6">
+				<div class="pairing-number"><p>6</p></div>
+				<div class="pairing-fonts">
+					<p>Font1</p>
+					<i class="fas fa-plus"></i>
+					<p>Font2</p>
+				</div>
 				<div class="pairing-sample">
 					<div class="up">
-						<h2>SampleTitle</h2>
-						<p>SampleText</p>
-						<p>SampleSignature</p>
+						<h2>Lorem Ipsum</h2>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare sollicitudin metus ut pretium. In ut enim iaculis, tempor
+							magna id, commodo sem. Proin mollis aliquam risus ut elementum. Fusce maximus et urna at mollis. Morbi at erat ac massa pharetra
+							fringilla. Praesent venenatis convallis posuere.
+						</p>
+						<p class="signature">"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit"</p>
 					</div>
 					<div class="down">
-						<button>Download Font Pair</button>
-						<p>View Font1 + Font2 on Google Fonts</p>
-						<button>Copy the Code</button>
-						<p>Click to open HTML + CSS</p>
+						<button class="button-download">Download Font Pair</button>
+						<p class="view-font">View on Google Fonts</p>
+						<button class="button-code">Copy the Code</button>
+						<p class="view-html">Click to open HTML + CSS</p>
 					</div>
 				</div>
 			</section>
-			<section id="id_section">
-				<div class="pairing-number">1</div>
-				<div class="pairing-fonts">Font1 + Font2</div>
+			<section id="section7">
+				<div class="pairing-number"><p>7</p></div>
+				<div class="pairing-fonts">
+					<p>Font1</p>
+					<i class="fas fa-plus"></i>
+					<p>Font2</p>
+				</div>
 				<div class="pairing-sample">
 					<div class="up">
-						<h2>SampleTitle</h2>
-						<p>SampleText</p>
-						<p>SampleSignature</p>
+						<h2>Lorem Ipsum</h2>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare sollicitudin metus ut pretium. In ut enim iaculis, tempor
+							magna id, commodo sem. Proin mollis aliquam risus ut elementum. Fusce maximus et urna at mollis. Morbi at erat ac massa pharetra
+							fringilla. Praesent venenatis convallis posuere.
+						</p>
+						<p class="signature">"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit"</p>
 					</div>
 					<div class="down">
-						<button>Download Font Pair</button>
-						<p>View Font1 + Font2 on Google Fonts</p>
-						<button>Copy the Code</button>
-						<p>Click to open HTML + CSS</p>
+						<button class="button-download">Download Font Pair</button>
+						<p class="view-font">View on Google Fonts</p>
+						<button class="button-code">Copy the Code</button>
+						<p class="view-html">Click to open HTML + CSS</p>
 					</div>
 				</div>
 			</section>
-			<section id="id_section">
-				<div class="pairing-number">1</div>
-				<div class="pairing-fonts">Font1 + Font2</div>
+			<section id="section8">
+				<div class="pairing-number"><p>8</p></div>
+				<div class="pairing-fonts">
+					<p>Font1</p>
+					<i class="fas fa-plus"></i>
+					<p>Font2</p>
+				</div>
 				<div class="pairing-sample">
 					<div class="up">
-						<h2>SampleTitle</h2>
-						<p>SampleText</p>
-						<p>SampleSignature</p>
+						<h2>Lorem Ipsum</h2>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare sollicitudin metus ut pretium. In ut enim iaculis, tempor
+							magna id, commodo sem. Proin mollis aliquam risus ut elementum. Fusce maximus et urna at mollis. Morbi at erat ac massa pharetra
+							fringilla. Praesent venenatis convallis posuere.
+						</p>
+						<p class="signature">"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit"</p>
 					</div>
 					<div class="down">
-						<button>Download Font Pair</button>
-						<p>View Font1 + Font2 on Google Fonts</p>
-						<button>Copy the Code</button>
-						<p>Click to open HTML + CSS</p>
+						<button class="button-download">Download Font Pair</button>
+						<p class="view-font">View on Google Fonts</p>
+						<button class="button-code">Copy the Code</button>
+						<p class="view-html">Click to open HTML + CSS</p>
 					</div>
 				</div>
 			</section>
-			<section id="id_section">
-				<div class="pairing-number">1</div>
-				<div class="pairing-fonts">Font1 + Font2</div>
+			<section id="section9">
+				<div class="pairing-number"><p>9</p></div>
+				<div class="pairing-fonts">
+					<p>Font1</p>
+					<i class="fas fa-plus"></i>
+					<p>Font2</p>
+				</div>
 				<div class="pairing-sample">
 					<div class="up">
-						<h2>SampleTitle</h2>
-						<p>SampleText</p>
-						<p>SampleSignature</p>
+						<h2>Lorem Ipsum</h2>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare sollicitudin metus ut pretium. In ut enim iaculis, tempor
+							magna id, commodo sem. Proin mollis aliquam risus ut elementum. Fusce maximus et urna at mollis. Morbi at erat ac massa pharetra
+							fringilla. Praesent venenatis convallis posuere.
+						</p>
+						<p class="signature">"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit"</p>
 					</div>
 					<div class="down">
-						<button>Download Font Pair</button>
-						<p>View Font1 + Font2 on Google Fonts</p>
-						<button>Copy the Code</button>
-						<p>Click to open HTML + CSS</p>
+						<button class="button-download">Download Font Pair</button>
+						<p class="view-font">View on Google Fonts</p>
+						<button class="button-code">Copy the Code</button>
+						<p class="view-html">Click to open HTML + CSS</p>
 					</div>
 				</div>
 			</section>
-			<section id="id_section">
-				<div class="pairing-number">1</div>
-				<div class="pairing-fonts">Font1 + Font2</div>
+			<section id="section10">
+				<div class="pairing-number"><p>10</p></div>
+				<div class="pairing-fonts">
+					<p>Font1</p>
+					<i class="fas fa-plus"></i>
+					<p>Font2</p>
+				</div>
 				<div class="pairing-sample">
 					<div class="up">
-						<h2>SampleTitle</h2>
-						<p>SampleText</p>
-						<p>SampleSignature</p>
+						<h2>Lorem Ipsum</h2>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare sollicitudin metus ut pretium. In ut enim iaculis, tempor
+							magna id, commodo sem. Proin mollis aliquam risus ut elementum. Fusce maximus et urna at mollis. Morbi at erat ac massa pharetra
+							fringilla. Praesent venenatis convallis posuere.
+						</p>
+						<p class="signature">"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit"</p>
 					</div>
 					<div class="down">
-						<button>Download Font Pair</button>
-						<p>View Font1 + Font2 on Google Fonts</p>
-						<button>Copy the Code</button>
-						<p>Click to open HTML + CSS</p>
+						<button class="button-download">Download Font Pair</button>
+						<p class="view-font">View on Google Fonts</p>
+						<button class="button-code">Copy the Code</button>
+						<p class="view-html">Click to open HTML + CSS</p>
 					</div>
 				</div>
 			</section>
