--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 			<section id="section1">
 				<div class="pairing-number"><p>1</p></div>
 				<div class="pairing-fonts">
-					<p>Font1</p>
+					<p class="font1">Roboto Condensed</p>
 					<i class="fas fa-plus"></i>
-					<p>Font2</p>
+					<p class="font2">Cabin</p>
 				</div>
 				<div class="pairing-sample">
 					<div class="up">
@@ -45,9 +45,9 @@
 			<section id="section2">
 				<div class="pairing-number"><p>2</p></div>
 				<div class="pairing-fonts">
-					<p>Font1</p>
+					<p class="font1">Raleway</p>
 					<i class="fas fa-plus"></i>
-					<p>Font2</p>
+					<p class="font2">Open Sans</p>
 				</div>
 				<div class="pairing-sample">
 					<div class="up">
@@ -70,9 +70,9 @@
 			<section id="section3">
 				<div class="pairing-number"><p>3</p></div>
 				<div class="pairing-fonts">
-					<p>Font1</p>
+					<p class="font1">Playfair Display</p>
 					<i class="fas fa-plus"></i>
-					<p>Font2</p>
+					<p class="font2">Source Sans Pro</p>
 				</div>
 				<div class="pairing-sample">
 					<div class="up">
@@ -95,9 +95,9 @@
 			<section id="section4">
 				<div class="pairing-number"><p>4</p></div>
 				<div class="pairing-fonts">
-					<p>Font1</p>
+					<p class="font1">Roboto</p>
 					<i class="fas fa-plus"></i>
-					<p>Font2</p>
+					<p class="font2">Lora</p>
 				</div>
 				<div class="pairing-sample">
 					<div class="up">
@@ -120,9 +120,9 @@
 			<section id="section5">
 				<div class="pairing-number"><p>5</p></div>
 				<div class="pairing-fonts">
-					<p>Font1</p>
+					<p class="font1">Abril Fatface</p>
 					<i class="fas fa-plus"></i>
-					<p>Font2</p>
+					<p class="font2">Poppins</p>
 				</div>
 				<div class="pairing-sample">
 					<div class="up">
@@ -145,9 +145,9 @@
 			<section id="section6">
 				<div class="pairing-number"><p>6</p></div>
 				<div class="pairing-fonts">
-					<p>Font1</p>
+					<p class="font1">Ruda</p>
 					<i class="fas fa-plus"></i>
-					<p>Font2</p>
+					<p class="font2">Poppins</p>
 				</div>
 				<div class="pairing-sample">
 					<div class="up">
@@ -170,9 +170,9 @@
 			<section id="section7">
 				<div class="pairing-number"><p>7</p></div>
 				<div class="pairing-fonts">
-					<p>Font1</p>
+					<p class="font1">Cormorant Garamond</p>
 					<i class="fas fa-plus"></i>
-					<p>Font2</p>
+					<p class="font2">Fira Sans</p>
 				</div>
 				<div class="pairing-sample">
 					<div class="up">
@@ -195,9 +195,9 @@
 			<section id="section8">
 				<div class="pairing-number"><p>8</p></div>
 				<div class="pairing-fonts">
-					<p>Font1</p>
+					<p class="font1">PT Sans</p>
 					<i class="fas fa-plus"></i>
-					<p>Font2</p>
+					<p class="font2">Playfair Display</p>
 				</div>
 				<div class="pairing-sample">
 					<div class="up">
@@ -220,9 +220,9 @@
 			<section id="section9">
 				<div class="pairing-number"><p>9</p></div>
 				<div class="pairing-fonts">
-					<p>Font1</p>
+					<p class="font1">Roboto</p>
 					<i class="fas fa-plus"></i>
-					<p>Font2</p>
+					<p class="font2">Cabin</p>
 				</div>
 				<div class="pairing-sample">
 					<div class="up">
@@ -245,9 +245,9 @@
 			<section id="section10">
 				<div class="pairing-number"><p>10</p></div>
 				<div class="pairing-fonts">
-					<p>Font1</p>
+					<p class="font1">Oxygen</p>
 					<i class="fas fa-plus"></i>
-					<p>Font2</p>
+					<p class="font2">Noto Serif</p>
 				</div>
 				<div class="pairing-sample">
 					<div class="up">
